# ffmpeg_doc

./: CMakeLists.txt  README.md
doc/: ffmpeg_code.md  ffmpeg常用命令.md
doc/uml/: ffmpeg_data_process.mdj
inc/: ffmpeg_interface.h
src/: CMakeLists.txt
src/extrac_audio/: extrac_audio.cpp
src/extrac_video/: extrac_video.cpp
src/ffmpeg_avformat/: ffmpeg_avformat.cpp  ffmpeg_io.cpp  ffmpeg_mediainfo.cpp
src/ffmpeg_io/: avio_reading.cpp  ffmpeg_read_file.cpp  ffmpeg_write_file.cpp
src/ffmpeg_log/: ffmpeg_log.cpp  test.c
